# snapmount

./: Cargo.toml  README.md  justfile
.github/workflows/: cloud_storage.yml  continuous_integration.yml  security_audit.yml
examples/: config.toml  restic-backup@.service
src/: app.rs  cli.rs  command.rs  config.rs  error.rs  lvm.rs  main.rs  mount.rs
