[package]
name = "snapmount"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2018"
description = "Create and mount backup snapshots"
license = "MIT"

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
structopt = "0.3.21"
thiserror = "1.0.24"
toml = "0.5.8"
