[package]
name = "snapmount"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2021"
description = "Create and mount backup snapshots"
license = "MIT"

[dependencies]
env_logger = "0.9.0"
fs-err = "2.7.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.30"
toml = "0.5.8"
